static/css/admin.css
body {
  background-color:#f3f3f3 !important; 
}
.container .navbar-right p#greeting{
  color:white;
  position:relative;
  top:8px;
  padding:10px 30px 0 0;
  font-size:15px;
  line-height:15px;
}
.container .navbar-right a.btn {
  margin-top:10px; 
}
/*==========================
== ADMIN VIEW
==========================*/

#admin #drafts form {
  margin: 20px 0 10px -8px;
  padding: 0 0 0 20px;
  border-left: 16px solid lightgreen; }
#admin #drafts #post_title {
  font-size: 16px;
  font-weight: 400;
  margin: 0;
  width: 100%;
  border: none;
  border-bottom: 1px solid #ddd; 
  background: none;
  line-height: 45px;}
#admin #published, #admin #drafts {
  padding: 20px;   
}
#admin #published ul, #admin #drafts ul {
  padding:0;
  list-style-type:none;
}
#admin #published ul li, #admin #drafts ul li{
  border-bottom: 1px solid #ddd;
  padding: 15px;
  position: relative; }
#admin #published h2 {
  color: #999; }
#admin #published h2 a {
  margin-top: -2px; }
#admin #published h1, #admin #drafts h1, #admin #published h2, #admin #drafts h2 {
  position: relative;
  text-transform: uppercase; }
#admin .col h1 a, #admin .col h2 a {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 12px;
  padding: 2px 10px;
  line-height: 2.7em;
  margin: 5px 0 0; }
#admin .col ul li:hover .links {
  visibility: visible; }
#admin .col ul li .links {
  position: absolute;
  right: 0;
  top: 14px;
  background: #fff;
  padding: 1px 8px;
  visibility: hidden; }
#admin .col ul li .links a {
  color: #999;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px; }
#admin .col ul li .links a:hover {
  color: red; }
#admin .col ul li h3 {
  margin: 0;
  font-size: 16px;
  max-width: 100%;
  text-overflow: ellipsis;
  overflow: hidden; }
#admin .col ul li h3 a {
  border: none; }
#admin textarea, #admin pre {
    border: 1px solid rgba(128,128,128,.3);
    margin: 0;
    padding: 0;
    outline: 0;
    border: 0; }
#admin .expandingArea {
  position: relative; }
#admin .expandingArea > textarea, #admin .expandingArea > pre {
  white-space: pre-wrap;
  word-wrap: break-word; }
#admin .expandingArea > textarea {
    /* The border-box box model is used to allow
     * padding whilst still keeping the overall width
     * at exactly that of the containing element.
     */
    overflow: hidden;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
    /* This height is used when JS is disabled */
    height: 100px; }
#admin .expandingArea.active > textarea {
  /* Hide any scrollbars */
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  /* Remove WebKit user-resize widget */
  resize: none; }
#admin .expandingArea > pre {
  display: none; }
#admin .expandingArea.active > pre {
  display: block;
  /* Hide the text; just using it for sizing */
  visibility: hidden; }
/*==========================
== EDIT VIEW
==========================*/
.admin-box {
  background-color:#ffffff !important;
  -webkit-box-shadow:rgba(0, 0, 0, 0.0392157) 0 1px 1px !important;
  border:1px solid #E5E5E5 !important;
  box-shadow:rgba(0, 0, 0, 0.0392157) 0 1px 1px !important;
  margin-bottom:20px !important;
  padding:3px 8px !important;
}
textarea.admin-box {
  width:100% !important;
  max-width:100% !important;
  overflow:hidden !important;
  text-align:left !important;
  margin-top:20px !important;
}
textarea.admin-box#post_title {
  font-size:1.8em;
  font-weight:400;
  height:50px;
  max-height:50px;
}
/*Sidebar*/
#admin-sidebar-draft, #admin-sidebar-view {
  float:right;
}
.admin-box #upload_list_thumbnail img, 
.admin-box #upload_list_thumbnail input{
  max-width:100%;
  padding: 15px 0;
}
div#drop-upload{
  font-size: 13px;
  margin-left: 0px;
  color: #1e2221;
  width: 100%;
  padding: 1px;
}
div#drop-upload input{
  font-size: 13px;
}
#markdown-help-img{
  padding-right: 10px;
  float: left;
}
#markdown-help-title{
  margin: 1px;
}
#help-title{
  margin-left: 35px;
}

